# StockMarket-API

./: Bond.cpp  Bond.h  CMakeLists.txt  Investment.cpp  Investment.h  README.md  Stock.cpp  Stock.h  StockInformation.py  WebScrapper.py  infoOnStocks.csv  main.cpp  marketAPI.cpp  marketAPI.h  marketAPITesting.cpp
